--- a/style.css
+++ b/style.css
@@ -115,7 +115,18 @@ html{
 .smalltext{
   font-size: 18px;
 }
-.btn{
+.subscribe{
+    padding: 8px 20px;
+    margin:7px 3px;
+    border:2px solid white;
+    border-radius:8px;
+    background: none;
+    color:white;
+    cursor: pointer;
+    font-family: 'Ubuntu', sans-serif;
+    font-size:20px;
+}
+.watch{
     padding: 8px 20px;
     margin:7px 3px;
     border:2px solid white;
@@ -145,7 +156,7 @@ html{
  flex-direction: row-reverse;
 }
 .para{
-    padding:0px 65px;
+    padding:15px 65px;
 }
 .sectionsubtag{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -255,4 +266,18 @@ html{
     .para{
         padding: 0px;
     }
+}
+
+.subscribe:hover{
+    transform: scale(1.1);
+    background-color: white;
+color: black;
+
+}
+
+.watch:hover{
+    transform: scale(1.1);
+    background-color: white;
+color: black;
+
 }
